# EasyPocketMD

./: .env.example  .gitattributes  .gitignore  AGENTS.md  ANDROID_CI_CD_CONFIGURATION_COMPLETE.md  ANDROID_STATUSBAR_SETUP_COMPLETE.md  CI_CD_ANDROID_CONFIG_VERIFICATION.md  CODE_OF_CONDUCT.md  CODE_WIKI.md  CONTRIBUTING.md  DEPENDENCIES.md  IMPLEMENTATION_NOTES.md  QUICK_REFERENCE_CI_CD.md  README.md  README_EN.md  README_zh_CN.md  VERIFICATION_COMPLETE.md  add_modified_by_column.js  ascii.md  capacitor.config.json  capacitor.config.ts  current_find.txt  db.sql  electron-main.js  entry.js  entry.ts  handover.md  index.html  intro.html  jest.config.js  jest.config.ts  manifest.webmanifest  migration_20260330_share_realtime.sql  nginx.conf  package-lock.json  package.json  patch_tauri_bridge.ts  preload.js  readme.md  requirements.txt  (+15 more)
.agents/: implementation_plan.md  prosemirror_migration_plan.md  soul.md  step.md  vdtior2lexical_rules.md
.github/: copilot-instructions.md
api/: api_info.json  server.js  share_manager.php
css/: styles.css
docs/: ANDROID_STATUS_BAR_CONFIG.md
drafts/: 20250402.md
js/: appLifecycle.js  auth.js  code-runner.js  draftRecovery.js  e2e.js  emoji-picker.js  files.js  formula-picker.js  indexedDB.js  lazyImageLoader.js  localImageManager.js  main.js  main.ts  native-file.js  (+14 more)
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/deb/: easypocketmd.desktop.hbs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
wasm_text_engine/: CMakeLists.txt  README.md  package.json
wasm_text_engine/build-native/: smoke_test
wasm_text_engine/js/: image-compressor-client.js  image_compressor_client.js  text-engine-client.js
wasm_text_engine/scripts/: build_image_compressor.sh  build_wasm.sh  run_native_tests.sh
wasm_text_engine/src/: image_compressor.cpp  image_compressor.h  image_compressor_bindings.cpp  slash_command_index.cpp  text_engine.cpp  text_engine.h  wasm_bindings.cpp
wasm_text_engine/tests/: smoke_test.cpp  wasm_smoke.mjs
(+189 files in other folders)
