[package]
name = "easypocketmd_tauri"
version = "2.4.2"
description = "EasyPocketMD desktop app powered by Tauri"
authors = ["sunhouyun"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1.6", features = [ "fs-all", "path-all", "shell-open", "dialog-open"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
