[package]
name = "easypocketmd_tauri"
version = "2.4.2"
description = "EasyPocketMD desktop app powered by Tauri"
authors = ["sunhouyun"]
license = "MIT"
edition = "2021"

[lib]
name = "easypocketmd_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
